fixed alignment for bio area

--- a/imjessw/public/stylesheets/style.css
+++ b/imjessw/public/stylesheets/style.css
@@ -13,14 +13,16 @@ a {
 	height: 500px;
 }
 #bio{
+	height: 400px;
 
 }
 .bioPicContainer{
 	background-color: blue;
+	height: 400px;
 }
 #bioPic{
-	padding-top: 20px;
-	padding-bottom: 20px;
+	padding-top: 67px;
+/*	padding-bottom: 20px;*/
 }
 
 #bioArea{
@@ -29,8 +31,9 @@ a {
 
 }
 .shortBio{
-	height: 100%;
+	height: 400px;
     width: 50%;
+    padding-top:18%;
 
 }
 
@@ -39,5 +42,10 @@ a {
 	padding-top: 50px;
 	padding-bottom: 50px;
 	background-color: red;
+}
+
+#contact{
+	background-color: green;
+	height: 300px;
 }
 
